--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.4",
     "@tailwindcss/vite": "^4.1.10",
     "@turf/turf": "^7.2.0",
     "leaflet": "^1.9.4",
