--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "@turf/turf": "^7.2.0",
+    "react-router-dom": "^7.7.0",
     "tailwindcss": "^4.1.10",
     "turf": "^3.0.14"
   }
